--- a/course/10_icons_fonts/task_10_icons_fonts/pubspec.yaml
+++ b/course/10_icons_fonts/task_10_icons_fonts/pubspec.yaml
@@ -25,10 +25,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # TODO: Add icon image assets
+  # DONE: Add icon image assets
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/data/regular_units.json
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
@@ -36,13 +37,18 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.io/assets-and-images/#from-packages
 
-  # TODO: Add font asset
+  # DONE: Add font asset
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+  - family: Raleway
+    fonts:
+      - asset: assets/fonts/Raleway-Regular.ttf
+        weight: 500
+
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
